# CMakeDockerTemplate

./: .mergify.yml  .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json  postCreateScript.sh
.github/: dependabot.yaml
.github/workflows/: build.yml  dependabot-pr.yaml  readme-checker.yaml
Makefiles/: debug.mk  rules.mk  vsc.mk
cfg/: .env
cmakedockertemplate/: CMakeLists.txt
cmakedockertemplate/inc/: utils.h
cmakedockertemplate/lib/memlib/: CMakeLists.txt
cmakedockertemplate/lib/memlib/inc/: memlib.h
cmakedockertemplate/test/: CMakeLists.txt
dockerfiles/: Dockerfile.alpine  Dockerfile.debug
snippets/: c_cpp.code-snippets
